--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.bykth.confdroid.confdroid_application">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
