--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity
+                android:name=".NotificationActivity"
+                android:taskAffinity=""
+                android:excludeFromRecents="true">
+        </activity>
+        <receiver android:name=".ActionReceiver"></receiver>
         <activity android:name=".MainActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
